# qwuk

./: .gitignore  CMakeLists.txt  README.md  createversion.h.sh  entities_e1m1.txt  entities_e2m1.txt  entities_e3m1.txt  entities_e4m1.txt  entities_end.txt  entities_start.txt  entities_start_r.txt  faces_start.txt  main.cpp  set-pre-commit.bat
engine/: application.cpp  application.h  bsp-WIP.cpp  bsp.cpp  bsp.h  bspfile.cpp  bspfile.h  client.cpp  client.h  entities.cpp  entities.h  entity.h  entitystorage.cpp  entitystorage.h  filebuffer.h  gameinterface.cpp  gameinterface.h  gamemodule.cpp  gamemodule.h  main.cpp  math.h  physics.cpp  physics.h  plane.h  playermove.cpp  playermove.h  quake.cpp  quake.h  vertex.h
game/: buttons.c  doors.c  entities.c  entities.h  entity.h  game.c  game.h  plats.c  quake.c  stringtools.h  tools.h  triggers.c
git-hooks/: post-checkout  pre-commit
maps/: collision.bsp  first.bsp  nolight.bsp
opengl/: application_opengl.cpp  graphics.cpp  graphics.h  pipeline.cpp  pipeline.h  program.cpp  program.h  storagebuffer.cpp  storagebuffer.h
shaders/: quake-test.frag  quake-test.vert  quake.frag  quake.vert
source/: application.cpp  application.h  bspfile.h  filebuffer.cpp  gameinterface.cpp  quake.cpp
